# ruulang

./: .gitignore  README.md
compiler/: Cargo.toml  Makefile  README.md  slang_dsl.pyi
compiler/core/: Cargo.toml
compiler/core/src/: lib.rs
compiler/core/src/codegen/: codegen.rs  codegen_helper.rs  codegen_utils.rs  python.rs
compiler/core/src/config/: config.rs
compiler/core/src/parser/: assembler.rs  parse_location.rs  parser_constructs.rs  parser_utils.rs  ruulang.lalrpop  ruulang_ast.rs  schema_ast.rs  slang.lalrpop  slang_ast.rs
compiler/core/src/typechecker/: tc_ast.rs  typechecker.rs
compiler/core/src/utils/: error.rs  trie.rs  with_origin.rs
compiler/core/src/workspace/: workspace.rs
compiler/lsp/: Cargo.toml
compiler/lsp/src/: main.rs  server.rs  utils.rs
compiler/python/: Cargo.toml  pyproject.toml  slang_dsl.pyi
compiler/python/src/: bindings.rs  lib.rs  python.rs
compiler/src/: lib.rs  python.rs
compiler/src/parser/: slang.lalrpop  slang_ast.rs
compiler/tests/basic/: basic.json  basic.ruu  basic.slang  slang.toml
compiler/tests/nested/: slang.toml  top-level.json  top-level.py  top-level.slang
compiler/tests/nested/first-level/: first-level.json  first-level.py  first-level.slang
compiler/utils/: Cargo.toml
runtimes/python/: README.md  pyproject.toml
runtimes/python/src/ruulang_runtime/: __init__.py  registry.py
scripts/: install.sh  new-release.mts  package.json  tsconfig.json
vscode/: .eslintrc.js  .gitignore  .prettierrc.js  LICENSE  language-configuration.json  package.json  tsconfig.json
vscode/src/: extension.ts  semver.ts  serverControl.ts
vscode/syntaxes/: ruulang.tmLanguage.json  slang.tmLanguage.json
