[package]
name = "slang_dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "0.19.7",  features = ["lexer"] }
regex = "1"
serde = { version = "1.0.151", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.16"
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py37"] }
serde_json = "1.0.91"

[lib]
name = "slang_dsl"
crate-type = ["cdylib", "lib"]
