[package]
name = "slang_core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
async-recursion = "1.0.4"
lalrpop-util = { version = "0.19.7",  features = ["lexer"] }
regex = "1"
serde = { version = "1.0.151", features = ["serde_derive", "derive"] }
tokio = { version = "1.26.0", features = ["fs"] }
toml = "0.7.2"
serde_json = "1.0.93"