[package]
name = "slang_dsl"
version = "0.1.0"
edition = "2021"

[lib]
name = "slang_dsl"
crate-type = ["cdylib", "lib"]

[dependencies]
slang_core = { path = "../core" }
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py37"] }
serde = { version = "1.0.151", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"