[project]
name = "ruulang_runtime"
version = "0.1.2"
description = "The python runtime library for the RuuLang project"
authors = ["Zach <zach@dttw.tech>"]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/zwade/ruulang"

[tool.poetry]
name = "ruulang_runtime"
version = "0.1.2"
description = "The python runtime library for the RuuLang project"
authors = ["Zach <zach@dttw.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
